other tables added

--- a/data-collection/data_collection_usage.ipynb
+++ b/data-collection/data_collection_usage.ipynb
@@ -33,7 +33,11 @@
     "* getDefenseStatsSquads\n",
     "* getDefenseStatsPlayers\n",
     "* getPossessionStatsSquads\n",
-    "* getPossessionStatsPlayers"
+    "* getPossessionStatsPlayers\n",
+    "* getPlayingTimeStatsSquads\n",
+    "* getPlayingTimeStatsPlayers\n",
+    "* getMiscStatsSquads\n",
+    "* getMiscStatsPlayers"
    ]
   },
   {
