--- a/data-collection/data_collection_usage.ipynb
+++ b/data-collection/data_collection_usage.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1823,7 @@
        "[98 rows x 33 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2047,7 +2047,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2484,6 +2484,232 @@
     "df = getPreviousSeasons(getStandardStatsSquads, 5)\n",
     "display(df.head())\n",
     "display(df.tail())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adding per 90 stats\n",
+    "\n",
+    "Give each column to calculate for"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rk</th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Nation</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>Squad</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Born</th>\n",
+       "      <th>MP</th>\n",
+       "      <th>Starts</th>\n",
+       "      <th>Min</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Per 90 Minutes xA</th>\n",
+       "      <th>Per 90 Minutes xG+xA</th>\n",
+       "      <th>Per 90 Minutes npxG</th>\n",
+       "      <th>Per 90 Minutes npxG+xA</th>\n",
+       "      <th>League</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>PlayerID</th>\n",
+       "      <th>Per 90 Gls</th>\n",
+       "      <th>Per 90 Ast</th>\n",
+       "      <th>Per 90 PK</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Patrick van Aanholt</td>\n",
+       "      <td>NED</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>Crystal Palace</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>29</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2507</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>2019-2020</td>\n",
+       "      <td>38489231549</td>\n",
+       "      <td>0.107527</td>\n",
+       "      <td>0.071685</td>\n",
+       "      <td>0.035842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Max Aarons</td>\n",
+       "      <td>ENG</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>Norwich City</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>3240</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>2019-2020</td>\n",
+       "      <td>42094950342</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.027778</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Yunis Abdelhamid</td>\n",
+       "      <td>MAR</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>Reims</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2520</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>Ligue 1</td>\n",
+       "      <td>2019-2020</td>\n",
+       "      <td>15390913492</td>\n",
+       "      <td>0.107143</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Suleiman Abdullahi</td>\n",
+       "      <td>NGA</td>\n",
+       "      <td>FW,MF</td>\n",
+       "      <td>Union Berlin</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>157</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>Bundesliga</td>\n",
+       "      <td>2019-2020</td>\n",
+       "      <td>20753994174</td>\n",
+       "      <td>0.588235</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Mehdi Abeid</td>\n",
+       "      <td>ALG</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>Nantes</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>25</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1817</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>Ligue 1</td>\n",
+       "      <td>2019-2020</td>\n",
+       "      <td>9961535674</td>\n",
+       "      <td>0.049505</td>\n",
+       "      <td>0.099010</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 38 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Rk               Player Nation    Pos           Squad Age  Born  MP Starts  \\\n",
+       "0  1  Patrick van Aanholt    NED     DF  Crystal Palace  28  1990  29     29   \n",
+       "1  2           Max Aarons    ENG     DF    Norwich City  19  2000  36     36   \n",
+       "2  3     Yunis Abdelhamid    MAR     DF           Reims  31  1987  28     28   \n",
+       "3  4   Suleiman Abdullahi    NGA  FW,MF    Union Berlin  22  1996   6      1   \n",
+       "4  5          Mehdi Abeid    ALG     MF          Nantes  26  1992  25     20   \n",
+       "\n",
+       "    Min  ... Per 90 Minutes xA Per 90 Minutes xG+xA Per 90 Minutes npxG  \\\n",
+       "0  2507  ...              0.11                 0.20                0.06   \n",
+       "1  3240  ...              0.09                 0.11                0.01   \n",
+       "2  2520  ...              0.00                 0.05                0.05   \n",
+       "3   157  ...              0.10                 0.82                0.72   \n",
+       "4  1817  ...              0.07                 0.15                0.08   \n",
+       "\n",
+       "  Per 90 Minutes npxG+xA          League     Season     PlayerID Per 90 Gls  \\\n",
+       "0                   0.17  Premier League  2019-2020  38489231549   0.107527   \n",
+       "1                   0.11  Premier League  2019-2020  42094950342   0.000000   \n",
+       "2                   0.05         Ligue 1  2019-2020  15390913492   0.107143   \n",
+       "3                   0.82      Bundesliga  2019-2020  20753994174   0.588235   \n",
+       "4                   0.15         Ligue 1  2019-2020   9961535674   0.049505   \n",
+       "\n",
+       "  Per 90 Ast Per 90 PK  \n",
+       "0   0.071685  0.035842  \n",
+       "1   0.027778  0.000000  \n",
+       "2   0.000000  0.000000  \n",
+       "3   0.000000  0.000000  \n",
+       "4   0.099010  0.000000  \n",
+       "\n",
+       "[5 rows x 38 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_per90 = getPer90Columns(df, ['Gls','Ast','PK'])\n",
+    "df_per90.head()"
    ]
   },
   {
