--- a/analysis/group-lasso.ipynb
+++ b/analysis/group-lasso.ipynb
@@ -168,26 +168,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_2122 = pd.read_csv('../data/final/player-model-data_2021-2022.csv', index_col=0)\n",
-    "df_2122 = df_2122.iloc[:, :-10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_2122 = df_2122.iloc[:, :-10]\n",
+    "\n",
     "X_2122 = df_2122.iloc[:, 5:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,12 +219,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "preds_2122.to_csv('../data/output/predictions_2021-2022.csv', index=False)\n",
     "preds_2122_scaled.to_csv('../data/output/predictions-scaled_2021-2022.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_col = 'G-xG_tgt'\n",
+    "\n",
+    "y_train = Y_train[target_col]\n",
+    "y_test = Y_test[target_col]\n",
+    "\n",
+    "param_grid = {\n",
+    "    'group_lasso_regression__group_reg': reg,\n",
+    "    'group_lasso_regression__l1_reg': np.append([0], reg),\n",
+    "}\n",
+    "\n",
+    "col_tf = ColumnTransformer([\n",
+    "    ('one_hot_encoder', OneHotEncoder(), onehot_cols),\n",
+    "    ('power_transformer', PowerTransformer(), numeric_cols)\n",
+    "], remainder='passthrough')\n",
+    "\n",
+    "pl = Pipeline([\n",
+    "    ('column_transformer', col_tf),\n",
+    "    ('group_lasso_regression', GroupLasso(\n",
+    "        groups=groups,\n",
+    "        n_iter=10_000,\n",
+    "        tol=1e-3,\n",
+    "        scale_reg=None,\n",
+    "        frobenius_lipschitz=False,\n",
+    "        fit_intercept=True,\n",
+    "        random_state=1897,\n",
+    "        supress_warning=True,\n",
+    "    ))\n",
+    "])\n",
+    "\n",
+    "grid_cv = GridSearchCV(pl, param_grid, scoring='neg_mean_squared_error', cv=5)\n",
+    "grid_cv.fit(X_train, y_train)\n",
+    "\n",
+    "models[target_col[:-4]] = grid_cv"
    ]
   }
  ],
