--- a/analysis/group-lasso.ipynb
+++ b/analysis/group-lasso.ipynb
@@ -82,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg = np.logspace(-3, 3, 7) * 5\n",
+    "reg = np.logspace(-6, 0, 7) * 5\n",
     "\n",
     "param_grid = {\n",
     "    'group_lasso_regression__group_reg': reg,\n",
@@ -96,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [35:58<00:00, 215.86s/it]\n"
+      "100%|██████████| 10/10 [45:25<00:00, 272.58s/it]\n"
      ]
     }
    ],
@@ -141,23 +141,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'group_lasso_regression__group_reg': 0.005, 'group_lasso_regression__l1_reg': 0.005}\n",
-      "{'group_lasso_regression__group_reg': 0.005, 'group_lasso_regression__l1_reg': 0.005}\n",
-      "{'group_lasso_regression__group_reg': 0.005, 'group_lasso_regression__l1_reg': 0.005}\n",
-      "{'group_lasso_regression__group_reg': 0.005, 'group_lasso_regression__l1_reg': 0.005}\n",
-      "{'group_lasso_regression__group_reg': 0.005, 'group_lasso_regression__l1_reg': 0.005}\n",
-      "{'group_lasso_regression__group_reg': 0.005, 'group_lasso_regression__l1_reg': 0.005}\n",
-      "{'group_lasso_regression__group_reg': 0.005, 'group_lasso_regression__l1_reg': 0.005}\n",
-      "{'group_lasso_regression__group_reg': 0.005, 'group_lasso_regression__l1_reg': 0.005}\n",
-      "{'group_lasso_regression__group_reg': 0.005, 'group_lasso_regression__l1_reg': 0.005}\n",
-      "{'group_lasso_regression__group_reg': 0.005, 'group_lasso_regression__l1_reg': 0.005}\n"
+      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 4.9999999999999996e-06}\n",
+      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "{'group_lasso_regression__group_reg': 5e-05, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 4.9999999999999996e-06}\n",
+      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 5e-05}\n",
+      "{'group_lasso_regression__group_reg': 5e-05, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "{'group_lasso_regression__group_reg': 5e-05, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,12 +204,12 @@
     "for col in preds_2122_scaled:\n",
     "    min_ = preds_2122_scaled[col].min()\n",
     "    max_ = preds_2122_scaled[col].max()\n",
-    "    preds_2122_scaled[col] = (preds_2122_scaled[col] - min_) / (max_ - min_)"
+    "    preds_2122_scaled[col] = (preds_2122_scaled[col] - min_) / (max_ - min_) * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,53 +219,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "preds_2122.to_csv('../data/output/predictions_2021-2022.csv', index=False)\n",
     "preds_2122_scaled.to_csv('../data/output/predictions-scaled_2021-2022.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_col = 'G-xG_tgt'\n",
-    "\n",
-    "y_train = Y_train[target_col]\n",
-    "y_test = Y_test[target_col]\n",
-    "\n",
-    "param_grid = {\n",
-    "    'group_lasso_regression__group_reg': reg,\n",
-    "    'group_lasso_regression__l1_reg': np.append([0], reg),\n",
-    "}\n",
-    "\n",
-    "col_tf = ColumnTransformer([\n",
-    "    ('one_hot_encoder', OneHotEncoder(), onehot_cols),\n",
-    "    ('power_transformer', PowerTransformer(), numeric_cols)\n",
-    "], remainder='passthrough')\n",
-    "\n",
-    "pl = Pipeline([\n",
-    "    ('column_transformer', col_tf),\n",
-    "    ('group_lasso_regression', GroupLasso(\n",
-    "        groups=groups,\n",
-    "        n_iter=10_000,\n",
-    "        tol=1e-3,\n",
-    "        scale_reg=None,\n",
-    "        frobenius_lipschitz=False,\n",
-    "        fit_intercept=True,\n",
-    "        random_state=1897,\n",
-    "        supress_warning=True,\n",
-    "    ))\n",
-    "])\n",
-    "\n",
-    "grid_cv = GridSearchCV(pl, param_grid, scoring='neg_mean_squared_error', cv=5)\n",
-    "grid_cv.fit(X_train, y_train)\n",
-    "\n",
-    "models[target_col[:-4]] = grid_cv"
    ]
   }
  ],
