--- a/analysis/group-lasso.ipynb
+++ b/analysis/group-lasso.ipynb
@@ -21,6 +21,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -140,30 +147,267 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 4.9999999999999996e-06}\n",
-      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
-      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
-      "{'group_lasso_regression__group_reg': 5e-05, 'group_lasso_regression__l1_reg': 0.0005}\n",
-      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 4.9999999999999996e-06}\n",
-      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
-      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 5e-05}\n",
-      "{'group_lasso_regression__group_reg': 5e-05, 'group_lasso_regression__l1_reg': 0.0005}\n",
-      "{'group_lasso_regression__group_reg': 5e-05, 'group_lasso_regression__l1_reg': 0.0005}\n",
-      "{'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n"
+      "Gls            {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 4.9999999999999996e-06}\n",
+      "G-xG           {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "SCA            {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "Ast            {'group_lasso_regression__group_reg': 5e-05, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "xA             {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 4.9999999999999996e-06}\n",
+      "TklW           {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "Int            {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 5e-05}\n",
+      "PressuresSucc  {'group_lasso_regression__group_reg': 5e-05, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "Clr            {'group_lasso_regression__group_reg': 5e-05, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "AerialDuelsWon {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n"
      ]
     }
    ],
    "source": [
     "for m in models:\n",
-    "    print(models[m].best_params_)"
+    "    print(f'{m:14s}', models[m].best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one_hot_encoder__prev_season_squad_play_style_0     True\n",
+      "one_hot_encoder__prev_season_squad_play_style_1     False\n",
+      "one_hot_encoder__prev_season_squad_play_style_2     True\n",
+      "one_hot_encoder__prev_season_squad_play_style_3     True\n",
+      "one_hot_encoder__prev_season_squad_play_style_4     True\n",
+      "one_hot_encoder__prev_season_squad_play_style_5     True\n",
+      "one_hot_encoder__prev_season_league_Bundesliga      True\n",
+      "one_hot_encoder__prev_season_league_La Liga         True\n",
+      "one_hot_encoder__prev_season_league_Ligue 1         True\n",
+      "one_hot_encoder__prev_season_league_Premier League  True\n",
+      "one_hot_encoder__prev_season_league_Serie A         True\n",
+      "one_hot_encoder__League_Bundesliga                  True\n",
+      "one_hot_encoder__League_La Liga                     True\n",
+      "one_hot_encoder__League_Ligue 1                     True\n",
+      "one_hot_encoder__League_Premier League              True\n",
+      "one_hot_encoder__League_Serie A                     True\n",
+      "one_hot_encoder__Pos_DF                             True\n",
+      "one_hot_encoder__Pos_FW                             True\n",
+      "one_hot_encoder__Pos_MF                             True\n",
+      "power_transformer__90s                              True\n",
+      "power_transformer__Gls_shoot                        True\n",
+      "power_transformer__Sh_shoot                         True\n",
+      "power_transformer__SoT_shoot                        True\n",
+      "power_transformer__SoT%_shoot                       False\n",
+      "power_transformer__Sh/90_shoot                      True\n",
+      "power_transformer__SoT/90_shoot                     True\n",
+      "power_transformer__G/Sh_shoot                       False\n",
+      "power_transformer__G/SoT_shoot                      True\n",
+      "power_transformer__Dist_shoot                       True\n",
+      "power_transformer__FK_shoot                         True\n",
+      "power_transformer__PK_shoot                         False\n",
+      "power_transformer__PKatt_shoot                      True\n",
+      "power_transformer__xG_shoot                         False\n",
+      "power_transformer__npxG_shoot                       False\n",
+      "power_transformer__npxG/Sh_shoot                    True\n",
+      "power_transformer__G-xG_shoot                       False\n",
+      "power_transformer__np:G-xG_shoot                    True\n",
+      "power_transformer__SCA_gsc                          True\n",
+      "power_transformer__SCA90_gsc                        True\n",
+      "power_transformer__PassLive_gsc                     True\n",
+      "power_transformer__PassDead_gsc                     True\n",
+      "power_transformer__Drib_gsc                         True\n",
+      "power_transformer__Sh_gsc                           True\n",
+      "power_transformer__Fld_gsc                          True\n",
+      "power_transformer__Def_gsc                          True\n",
+      "power_transformer__GCA_gsc                          True\n",
+      "power_transformer__GCA90_gsc                        True\n",
+      "power_transformer__PassLive.1_gsc                   True\n",
+      "power_transformer__PassDead.1_gsc                   True\n",
+      "power_transformer__Drib.1_gsc                       False\n",
+      "power_transformer__Sh.1_gsc                         False\n",
+      "power_transformer__Fld.1_gsc                        False\n",
+      "power_transformer__Def.1_gsc                        True\n",
+      "power_transformer__Total Cmp_pass                   False\n",
+      "power_transformer__Total Att_pass                   False\n",
+      "power_transformer__Total Cmp%_pass                  True\n",
+      "power_transformer__Total TotDist_pass               False\n",
+      "power_transformer__Total PrgDist_pass               True\n",
+      "power_transformer__Short Cmp_pass                   True\n",
+      "power_transformer__Short Att_pass                   True\n",
+      "power_transformer__Short Cmp%_pass                  True\n",
+      "power_transformer__Medium Cmp_pass                  True\n",
+      "power_transformer__Medium Att_pass                  True\n",
+      "power_transformer__Medium Cmp%_pass                 True\n",
+      "power_transformer__Long Cmp_pass                    True\n",
+      "power_transformer__Long Att_pass                    True\n",
+      "power_transformer__Long Cmp%_pass                   False\n",
+      "power_transformer__Ast_pass                         True\n",
+      "power_transformer__xA_pass                          True\n",
+      "power_transformer__A-xA_pass                        True\n",
+      "power_transformer__KP_pass                          True\n",
+      "power_transformer__1/3_pass                         True\n",
+      "power_transformer__PPA_pass                         True\n",
+      "power_transformer__CrsPA_pass                       True\n",
+      "power_transformer__Prog_pass                        True\n",
+      "power_transformer__Pass Types: Live_pass_type       True\n",
+      "power_transformer__Pass Types: Dead_pass_type       True\n",
+      "power_transformer__Pass Types: FK_pass_type         True\n",
+      "power_transformer__Pass Types: TB_pass_type         True\n",
+      "power_transformer__Pass Types: Press_pass_type      True\n",
+      "power_transformer__Pass Types: Sw_pass_type         True\n",
+      "power_transformer__Pass Types: Crs_pass_type        True\n",
+      "power_transformer__Pass Types: CK_pass_type         True\n",
+      "power_transformer__Corner Kicks: In_pass_type       True\n",
+      "power_transformer__Corner Kicks: Out_pass_type      True\n",
+      "power_transformer__Corner Kicks: Str_pass_type      True\n",
+      "power_transformer__Height: Ground_pass_type         True\n",
+      "power_transformer__Height: Low_pass_type            True\n",
+      "power_transformer__Height: High_pass_type           True\n",
+      "power_transformer__Body Parts: Left_pass_type       True\n",
+      "power_transformer__Body Parts: Right_pass_type      True\n",
+      "power_transformer__Body Parts: Head_pass_type       True\n",
+      "power_transformer__Body Parts: TI_pass_type         True\n",
+      "power_transformer__Body Parts: Other_pass_type      True\n",
+      "power_transformer__Outcomes: Off_pass_type          True\n",
+      "power_transformer__Outcomes: Out_pass_type          True\n",
+      "power_transformer__Outcomes: Int_pass_type          True\n",
+      "power_transformer__Outcomes: Blocks_pass_type       True\n",
+      "power_transformer__Tackles: Tkl_def                 False\n",
+      "power_transformer__Tackles: TklW_def                True\n",
+      "power_transformer__Tackles: Def 3rd_def             True\n",
+      "power_transformer__Tackles: Mid 3rd_def             True\n",
+      "power_transformer__Tackles: Att 3rd_def             True\n",
+      "power_transformer__Vs Dribbles: Tkl_def             True\n",
+      "power_transformer__Vs Dribbles: Att_def             True\n",
+      "power_transformer__Vs Dribbles: Tkl%_def            True\n",
+      "power_transformer__Vs Dribbles: Past_def            True\n",
+      "power_transformer__Pressures: Press_def             True\n",
+      "power_transformer__Pressures: Succ_def              True\n",
+      "power_transformer__Pressures: %_def                 True\n",
+      "power_transformer__Pressures: Def 3rd_def           True\n",
+      "power_transformer__Pressures: Mid 3rd_def           True\n",
+      "power_transformer__Pressures: Att 3rd_def           True\n",
+      "power_transformer__Blocks: Blocks_def               False\n",
+      "power_transformer__Blocks: Sh_def                   True\n",
+      "power_transformer__Blocks: ShSv_def                 True\n",
+      "power_transformer__Blocks: Pass_def                 True\n",
+      "power_transformer__Int_def                          True\n",
+      "power_transformer__Tkl+Int_def                      False\n",
+      "power_transformer__Clr_def                          True\n",
+      "power_transformer__Err_def                          False\n",
+      "power_transformer__Touches_poss                     True\n",
+      "power_transformer__Def Pen_poss                     True\n",
+      "power_transformer__Def 3rd_poss                     True\n",
+      "power_transformer__Mid 3rd_poss                     True\n",
+      "power_transformer__Att 3rd_poss                     True\n",
+      "power_transformer__Att Pen_poss                     True\n",
+      "power_transformer__Live_poss                        True\n",
+      "power_transformer__Succ_poss                        True\n",
+      "power_transformer__Att_poss                         True\n",
+      "power_transformer__Succ%_poss                       True\n",
+      "power_transformer__#Pl_poss                         True\n",
+      "power_transformer__Megs_poss                        True\n",
+      "power_transformer__Carries_poss                     True\n",
+      "power_transformer__TotDist_poss                     True\n",
+      "power_transformer__PrgDist_poss                     True\n",
+      "power_transformer__Prog_poss                        True\n",
+      "power_transformer__1/3_poss                         True\n",
+      "power_transformer__CPA_poss                         True\n",
+      "power_transformer__Mis_poss                         True\n",
+      "power_transformer__Dis_poss                         False\n",
+      "power_transformer__Targ_poss                        True\n",
+      "power_transformer__Rec_poss                         True\n",
+      "power_transformer__Rec%_poss                        True\n",
+      "power_transformer__Prog.1_poss                      True\n",
+      "power_transformer__Won_misc                         True\n",
+      "power_transformer__Lost_misc                        True\n",
+      "power_transformer__Won%_misc                        True\n",
+      "power_transformer__MP_time                          True\n",
+      "power_transformer__Min_time                         True\n",
+      "power_transformer__Mn/MP_time                       True\n",
+      "power_transformer__Min%_time                        True\n",
+      "power_transformer__Starts_time                      True\n",
+      "power_transformer__Mn/Start_time                    True\n",
+      "power_transformer__Compl_time                       False\n",
+      "power_transformer__Subs_time                        True\n",
+      "power_transformer__Mn/Sub_time                      True\n",
+      "power_transformer__unSub_time                       True\n",
+      "power_transformer__PPM_time                         True\n",
+      "power_transformer__onG_time                         True\n",
+      "power_transformer__onGA_time                        True\n",
+      "power_transformer__+/-_time                         True\n",
+      "power_transformer__+/-90_time                       True\n",
+      "power_transformer__On-Off_time                      True\n",
+      "power_transformer__onxG_time                        True\n",
+      "power_transformer__onxGA_time                       True\n",
+      "power_transformer__xG+/-_time                       False\n",
+      "power_transformer__xG+/-90_time                     True\n",
+      "power_transformer__On-Off.1_time                    True\n",
+      "remainder__Age                                      True\n"
+     ]
+    }
+   ],
+   "source": [
+    "stat = 'SCA'\n",
+    "\n",
+    "feature_names = models[stat].best_estimator_['column_transformer'].get_feature_names_out()\n",
+    "sparsity_mask = models[stat].best_estimator_['group_lasso_regression'].sparsity_mask_\n",
+    "\n",
+    "for feature, mask in zip(feature_names, sparsity_mask):\n",
+    "    print(f'{feature:51s}', mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gls            0.0125\n",
+      "G-xG           0.0061\n",
+      "SCA            0.3230\n",
+      "Ast            0.0067\n",
+      "xA             0.0024\n",
+      "TklW           0.1104\n",
+      "Int            0.1241\n",
+      "PressuresSucc  0.8217\n",
+      "Clr            0.4467\n",
+      "AerialDuelsWon 0.3938\n"
+     ]
+    }
+   ],
+   "source": [
+    "for m in models:\n",
+    "    y_pred = models[m].predict(X_test)\n",
+    "    y_test = Y_test[f'{m}_tgt']\n",
+    "\n",
+    "    mse_test = mean_squared_error(y_test, y_pred)\n",
+    "    print(f'{m:14s}', f'{mse_test:5.4f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2021-22 Predictions"
    ]
   },
   {
