Add play style and league summary

--- a/analysis/group-lasso-2.ipynb
+++ b/analysis/group-lasso-2.ipynb
@@ -418,6 +418,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_styles_and_leagues = []\n",
+    "\n",
+    "for stat in models:\n",
+    "    feature_names = models[stat].best_estimator_['column_transformer'].get_feature_names_out()\n",
+    "    sparsity_mask = models[stat].best_estimator_['group_lasso_regression'].sparsity_mask_\n",
+    "\n",
+    "    play_styles_and_leagues = [name[17:] for name in feature_names[:51]]\n",
+    "    used_in_model = ['x' if x else '' for x in sparsity_mask[:51]]\n",
+    "\n",
+    "    play_styles_and_leagues = pd.Series(used_in_model, index=play_styles_and_leagues, name=stat)\n",
+    "    stats_styles_and_leagues.append(play_styles_and_leagues)\n",
+    "\n",
+    "stats_styles_and_leagues = pd.concat(stats_styles_and_leagues, axis=1)\n",
+    "stats_styles_and_leagues.to_csv('../data/output/play-styles-leagues-used-in-model.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
