--- a/analysis/group-lasso-2.ipynb
+++ b/analysis/group-lasso-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,6 +146,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [03:42<00:00, 22.24s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quickly fit each model with best params found previously\n",
+    "best_params = {\n",
+    "    'Gls': {'group_lasso_regression__group_reg': [5e-06], 'group_lasso_regression__l1_reg': [0.0005]},\n",
+    "    'G-xG': {'group_lasso_regression__group_reg': [0.0005], 'group_lasso_regression__l1_reg': [0.0005]},\n",
+    "    'SCA': {'group_lasso_regression__group_reg': [0.0005], 'group_lasso_regression__l1_reg': [0.0005]},\n",
+    "    'Ast': {'group_lasso_regression__group_reg': [0.0005], 'group_lasso_regression__l1_reg': [5e-05]},\n",
+    "    'xA': {'group_lasso_regression__group_reg': [0.0005], 'group_lasso_regression__l1_reg': [5e-06]},\n",
+    "    'TklW': {'group_lasso_regression__group_reg': [0.0005], 'group_lasso_regression__l1_reg': [0.0005]},\n",
+    "    'Int': {'group_lasso_regression__group_reg': [0.0005], 'group_lasso_regression__l1_reg': [5e-05]},\n",
+    "    'PressuresSucc': {'group_lasso_regression__group_reg': [0.0005], 'group_lasso_regression__l1_reg': [0.0005]},\n",
+    "    'Clr': {'group_lasso_regression__group_reg': [0.0005], 'group_lasso_regression__l1_reg': [0.0005]},\n",
+    "    'AerialDuelsWon': {'group_lasso_regression__group_reg': [5e-05], 'group_lasso_regression__l1_reg': [0.0005]},\n",
+    "}\n",
+    "\n",
+    "models = {}\n",
+    "\n",
+    "for target_col in tqdm(target_cols):\n",
+    "    y_train = Y_train[target_col]\n",
+    "    y_test = Y_test[target_col]\n",
+    "\n",
+    "    col_tf = ColumnTransformer([\n",
+    "        ('one_hot_encoder', OneHotEncoder(), onehot_cols),\n",
+    "        ('power_transformer', PowerTransformer(), numeric_cols)\n",
+    "    ], remainder='passthrough')\n",
+    "\n",
+    "    pl = Pipeline([\n",
+    "        ('column_transformer', col_tf),\n",
+    "        ('group_lasso_regression', GroupLasso(\n",
+    "            groups=groups,\n",
+    "            n_iter=10_000,\n",
+    "            tol=1e-3,\n",
+    "            scale_reg=None,\n",
+    "            frobenius_lipschitz=False,\n",
+    "            fit_intercept=True,\n",
+    "            random_state=1897,\n",
+    "            supress_warning=True,\n",
+    "        ))\n",
+    "    ])\n",
+    "\n",
+    "    param_grid = best_params[target_col[:-4]]\n",
+    "    grid_cv = GridSearchCV(pl, param_grid, scoring='neg_mean_squared_error', cv=5)\n",
+    "    grid_cv.fit(X_train, y_train)\n",
+    "\n",
+    "    models[target_col[:-4]] = grid_cv"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -154,18 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gls            {'group_lasso_regression__group_reg': 4.9999999999999996e-06, 'group_lasso_regression__l1_reg': 0.0005}\n",
+      "Gls            {'group_lasso_regression__group_reg': 5e-06, 'group_lasso_regression__l1_reg': 0.0005}\n",
       "G-xG           {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
       "SCA            {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
       "Ast            {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 5e-05}\n",
-      "xA             {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 4.9999999999999996e-06}\n",
+      "xA             {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 5e-06}\n",
       "TklW           {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
       "Int            {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 5e-05}\n",
       "PressuresSucc  {'group_lasso_regression__group_reg': 0.0005, 'group_lasso_regression__l1_reg': 0.0005}\n",
@@ -181,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,10 +486,10 @@
     "\n",
     "for stat in models:\n",
     "    feature_names = models[stat].best_estimator_['column_transformer'].get_feature_names_out()\n",
-    "    sparsity_mask = models[stat].best_estimator_['group_lasso_regression'].sparsity_mask_\n",
+    "    sparsity_mask = models[stat].best_estimator_['group_lasso_regression'].coef_\n",
     "\n",
-    "    play_styles_and_leagues = [name[17:] for name in feature_names[:51]]\n",
-    "    used_in_model = ['x' if x else '' for x in sparsity_mask[:51]]\n",
+    "    play_styles_and_leagues = [name[17:] for name in feature_names[:61]]\n",
+    "    used_in_model = ['x' if x else '' for x in sparsity_mask[:61]]\n",
     "\n",
     "    play_styles_and_leagues = pd.Series(used_in_model, index=play_styles_and_leagues, name=stat)\n",
     "    stats_styles_and_leagues.append(play_styles_and_leagues)\n",
@@ -440,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
